--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -1046,7 +1046,7 @@
                                 </variation>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ooE-x9-IRR">
-                                <rect key="frame" x="96" y="308" width="183" height="52"/>
+                                <rect key="frame" x="52" y="224" width="272" height="52"/>
                                 <color key="backgroundColor" red="0.39954501910000001" green="0.56364766580000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="33"/>
                                 <state key="normal" title="Reset levels">
@@ -1057,7 +1057,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BL5-td-Ogt">
-                                <rect key="frame" x="96" y="392" width="183" height="52"/>
+                                <rect key="frame" x="52" y="308" width="272" height="52"/>
                                 <color key="backgroundColor" red="0.39954501910000001" green="0.56364766580000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="33"/>
                                 <state key="normal" title="Remove Ads">
@@ -1065,31 +1065,49 @@
                                 </state>
                                 <connections>
                                     <action selector="removeAdsButtonPressed:" destination="ca3-CV-F2s" eventType="touchUpInside" id="aZX-yi-6o1"/>
-                                    <action selector="resetLevelsButtonPressed:" destination="ca3-CV-F2s" eventType="touchUpInside" id="UQg-NB-AdS"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dju-zN-E1A">
+                                <rect key="frame" x="52" y="392" width="272" height="52"/>
+                                <color key="backgroundColor" red="0.39954501910000001" green="0.56364766580000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="33"/>
+                                <state key="normal" title="Restore Purchases">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="restorePurchasesButtonPressed:" destination="ca3-CV-F2s" eventType="touchUpInside" id="LcR-th-RPQ"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.3855977042" green="0.7193788283" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="0H3-O3-jiy" firstAttribute="leading" secondItem="1wW-IR-nk2" secondAttribute="leadingMargin" constant="-11" id="17l-C5-g5J"/>
+                            <constraint firstItem="BL5-td-Ogt" firstAttribute="width" secondItem="dju-zN-E1A" secondAttribute="width" id="3p2-HH-LTv"/>
                             <constraint firstItem="BL5-td-Ogt" firstAttribute="leading" secondItem="ooE-x9-IRR" secondAttribute="leading" id="DJc-GL-KRd"/>
                             <constraint firstItem="ooE-x9-IRR" firstAttribute="centerX" secondItem="1wW-IR-nk2" secondAttribute="centerX" id="GiH-fB-E6N"/>
                             <constraint firstItem="ooE-x9-IRR" firstAttribute="top" secondItem="yFX-Fl-8Fn" secondAttribute="bottom" constant="151" id="Jq7-kR-pSj"/>
                             <constraint firstItem="yFX-Fl-8Fn" firstAttribute="top" secondItem="0H3-O3-jiy" secondAttribute="bottom" id="MEK-b9-4GL"/>
+                            <constraint firstItem="BL5-td-Ogt" firstAttribute="height" secondItem="dju-zN-E1A" secondAttribute="height" id="Q9b-Nx-xyd"/>
+                            <constraint firstItem="BL5-td-Ogt" firstAttribute="leading" secondItem="dju-zN-E1A" secondAttribute="leading" id="QIU-tb-IMh"/>
                             <constraint firstItem="BL5-td-Ogt" firstAttribute="height" secondItem="ooE-x9-IRR" secondAttribute="height" id="RDN-sw-i4C"/>
                             <constraint firstItem="ooE-x9-IRR" firstAttribute="centerY" secondItem="1wW-IR-nk2" secondAttribute="centerY" id="TvV-AM-GQ4"/>
                             <constraint firstItem="ooE-x9-IRR" firstAttribute="centerX" secondItem="1wW-IR-nk2" secondAttribute="centerX" id="UOn-pw-Zne"/>
+                            <constraint firstItem="BL5-td-Ogt" firstAttribute="centerX" secondItem="1wW-IR-nk2" secondAttribute="centerX" id="WZv-FD-BQX"/>
                             <constraint firstItem="BL5-td-Ogt" firstAttribute="width" secondItem="ooE-x9-IRR" secondAttribute="width" id="a3c-K0-8lz"/>
                             <constraint firstItem="BL5-td-Ogt" firstAttribute="top" secondItem="ooE-x9-IRR" secondAttribute="bottom" constant="32" id="azD-De-Bo3"/>
+                            <constraint firstItem="BL5-td-Ogt" firstAttribute="centerY" secondItem="1wW-IR-nk2" secondAttribute="centerY" id="c7F-ed-4zx"/>
                             <constraint firstItem="yFX-Fl-8Fn" firstAttribute="leading" secondItem="1wW-IR-nk2" secondAttribute="leadingMargin" constant="-20" id="fb6-Eb-SJ1"/>
                             <constraint firstAttribute="trailingMargin" secondItem="yFX-Fl-8Fn" secondAttribute="trailing" constant="-20" id="gLY-1Q-awv"/>
                             <constraint firstItem="0H3-O3-jiy" firstAttribute="top" secondItem="hKA-6U-b4G" secondAttribute="bottom" constant="5" id="gvl-H6-tHC"/>
                             <constraint firstItem="nyp-IJ-fWy" firstAttribute="top" secondItem="ooE-x9-IRR" secondAttribute="bottom" constant="370" id="hY9-it-8oB"/>
+                            <constraint firstItem="dju-zN-E1A" firstAttribute="top" secondItem="BL5-td-Ogt" secondAttribute="bottom" constant="32" id="xDE-Gx-MdE"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="GiH-fB-E6N"/>
                                 <exclude reference="Jq7-kR-pSj"/>
+                                <exclude reference="TvV-AM-GQ4"/>
+                                <exclude reference="UOn-pw-Zne"/>
                                 <exclude reference="hY9-it-8oB"/>
                             </mask>
                         </variation>
@@ -1101,7 +1119,9 @@
                         <outlet property="backButton" destination="0H3-O3-jiy" id="uad-dv-mGO"/>
                         <outlet property="removeAdsButton" destination="BL5-td-Ogt" id="rfa-Am-JGg"/>
                         <outlet property="resetLevelsButton" destination="ooE-x9-IRR" id="5ue-gc-lQh"/>
+                        <outlet property="restorePurchasesButton" destination="dju-zN-E1A" id="m3w-MN-2Ah"/>
                         <outlet property="settingsLabel" destination="yFX-Fl-8Fn" id="XGj-U3-fpd"/>
+                        <outlet property="temporaryConstraint" destination="azD-De-Bo3" id="E26-oQ-a6a"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Hwe-BU-a5X" userLabel="First Responder" sceneMemberID="firstResponder"/>
